[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprite/SimpleKeys/Classic/Light/Single PNGs/EMPTY1.png" type="Texture" id=1]
[ext_resource path="res://Sprite/Roover_gris.png" type="Texture" id=2]
[ext_resource path="res://control_theme.tres" type="Theme" id=3]
[ext_resource path="res://UI/playerInputInfo.gd" type="Script" id=4]

[node name="Vbox" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 4 )

[node name="_action" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 171.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="."]
margin_top = 175.0
margin_right = 1024.0
margin_bottom = 210.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
text = "Action"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 214.0
margin_right = 1024.0
margin_bottom = 385.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="fakeCont" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 328.0
margin_bottom = 171.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="_fake" type="TextureRect" parent="HBoxContainer/fakeCont"]
margin_right = 328.0
margin_bottom = 139.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="HBoxContainer/fakeCont"]
margin_top = 143.0
margin_right = 328.0
margin_bottom = 171.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
text = "Fake"
align = 1
valign = 1

[node name="stopCont" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 348.0
margin_right = 676.0
margin_bottom = 171.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="_stop" type="TextureRect" parent="HBoxContainer/stopCont"]
margin_right = 328.0
margin_bottom = 139.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="HBoxContainer/stopCont"]
margin_top = 143.0
margin_right = 328.0
margin_bottom = 171.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
text = "Stop"
align = 1
valign = 1

[node name="rightCont" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 696.0
margin_right = 1024.0
margin_bottom = 171.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="_right" type="TextureRect" parent="HBoxContainer/rightCont"]
margin_right = 328.0
margin_bottom = 139.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="HBoxContainer/rightCont"]
margin_top = 143.0
margin_right = 328.0
margin_bottom = 171.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
text = "Run"
align = 1
valign = 1

[node name="RobotImg" type="TextureRect" parent="."]
margin_top = 389.0
margin_right = 1024.0
margin_bottom = 561.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="PlayerId" type="Label" parent="."]
margin_top = 565.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 0.2
text = "PLAYER"
align = 1
valign = 1
